--- a/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Views/List-Bootstrap-ListGroup.cshtml
+++ b/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Views/List-Bootstrap-ListGroup.cshtml
@@ -22,7 +22,7 @@
         }
         else
         {
-            // List shape
+            // List shape, e.g. Pager
             // @Model.Items
             items = Model.Items;
         }
