Add apa style headings.

--- a/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Views/Layout.cshtml
+++ b/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Views/Layout.cshtml
@@ -9,7 +9,8 @@
     
     Style.Include("//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css");
     Style.Include("//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css");
-    Style.Include("Site.css");    
+    Style.Include("Site.css");
+    Style.Include("APA-Style.css");
 
     /* Some useful shortcuts or settings
     ***************************************************************/
