--- a/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Styles/APA-Style.css
+++ b/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Styles/APA-Style.css
@@ -12,45 +12,62 @@ Level   Format
 
 */
 
-article.blog-post.blog-post header h1, 
-article.blog-post header h2, 
-article.blog-post header h3 {
-
+div.zone-content > article.blog-post header h1, 
+div.zone-content > article.blog-post header h2, 
+div.zone-content > article.blog-post header h3 {
     text-align:left;
     font-size:1.2em;
-
 }
 
-article.blog-post h1, article.blog-post h2, article.blog-post h3, article.blog-post h4, article.blog-post h5 {
+div.zone-content > article.blog-post h1, 
+div.zone-content > article.blog-post h2, 
+div.zone-content > article.blog-post h3, 
+div.zone-content > article.blog-post h4, 
+div.zone-content > article.blog-post h5 {
     font-size:1em;
 }
 
-article.blog-post h3, article.blog-post h4, article.blog-post h5,
-article.blog-post h3 + p, article.blog-post h4 + p, article.blog-post h5 + p {
+div.zone-content > article.blog-post h3, 
+div.zone-content > article.blog-post h4, 
+div.zone-content > article.blog-post h5,
+div.zone-content > article.blog-post h3 + p, 
+div.zone-content > article.blog-post h4 + p, 
+div.zone-content > article.blog-post h5 + p {
     display: inline;
     margin-top: 20px;
 }
 
-article.blog-post h1, article.blog-post h2, article.blog-post h3, article.blog-post h4 {
+div.zone-content > article.blog-post h1, 
+div.zone-content > article.blog-post h2, 
+div.zone-content > article.blog-post h3, 
+div.zone-content > article.blog-post h4 {
     font-weight: bold;
 }
 
-article.blog-post h1 {
+div.zone-content > article.blog-post h1 {
     text-align: center;
 }
 
-article.blog-post h2, article.blog-post h3, article.blog-post h4, article.blog-post h5 {
+div.zone-content > article.blog-post h2, 
+div.zone-content > article.blog-post h3, 
+div.zone-content > article.blog-post h4, 
+div.zone-content > article.blog-post h5 {
     text-align: left;
 }
 
-article.blog-post h3, article.blog-post h4, article.blog-post h5 {
+div.zone-content > article.blog-post h3, 
+div.zone-content > article.blog-post h4, 
+div.zone-content > article.blog-post h5 {
     margin-left: 25px;
 }
 
-    article.blog-post h3::after, article.blog-post h4::after, article.blog-post h5::after {
+    div.zone-content > article.blog-post h3::after, 
+    div.zone-content > article.blog-post h4::after, 
+    div.zone-content > article.blog-post h5::after {
         content: ".";
     }
 
-article.blog-post h4, article.blog-post h5 {
+div.zone-content > article.blog-post h4, 
+div.zone-content > article.blog-post h5 {
     font-style: italic;
 }
