Add responsive design metas. Shrink bootstrap list padding.

--- a/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Styles/Site.css
+++ b/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Styles/Site.css
@@ -35,7 +35,8 @@ group:after {
 
 /* Typography (Optional)
 ***************************************************************/
-@import url(http://yui.yahooapis.com/2.8.1/build/fonts/fonts-min.css);
+
+/* Included in Layout.cshtml. */
 
 
 /* General
@@ -98,11 +99,9 @@ div.zone-content > article.blog-post > p > a > img {
 /* Forms
 ***************************************************************/
 
-
 /* Misc
 ***************************************************************/
 
-/*Tags*/
 ul.tag-cloud
 {
     overflow:hidden;
