--- a/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Styles/APA-Style.css
+++ b/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Styles/APA-Style.css
@@ -12,62 +12,80 @@ Level   Format
 
 */
 
-article.blog-post header h1, 
-article.blog-post header h2, 
-article.blog-post header h3 {
-    text-align:left;
-    font-size:1.2em;
+.blog-post h1,
+.blog-post h2,
+.blog-post h3,
+.blog-post h4,
+.blog-post h5,
+.blog-post p,
+.blog-post blockquote {
+    margin: 0;
+    padding: 0;
+    font-family: arial;
+    margin-bottom: 20px;
+    font-size: 1em;
+    text-align: left;
+    border: none;
+    font-weight: normal;
 }
 
-article.blog-post h1, 
-article.blog-post h2, 
-article.blog-post h3, 
-article.blog-post h4, 
-article.blog-post h5 {
-    font-size:1em;
-}
+    .blog-post h3,
+    .blog-post h4,
+    .blog-post h5,
+    .blog-post h3 + p,
+    .blog-post h4 + p,
+    .blog-post h5 + p {
+        display: inline;
+    }
 
-article.blog-post h3, 
-article.blog-post h4, 
-article.blog-post h5,
-article.blog-post h3 + p, 
-article.blog-post h4 + p, 
-article.blog-post h5 + p {
-    display: inline;
-    margin-top: 20px;
-}
-
-article.blog-post h1, 
-article.blog-post h2, 
-article.blog-post h3, 
-article.blog-post h4 {
+.blog-post h1,
+.blog-post h2,
+.blog-post h3,
+.blog-post h4 {
     font-weight: bold;
 }
 
-article.blog-post h1 {
+.blog-post h1 {
     text-align: center;
 }
 
-article.blog-post h2, 
-article.blog-post h3, 
-article.blog-post h4, 
-article.blog-post h5 {
-    text-align: left;
+.blog-post header * {
+    text-align: center;
+    margin: 0;
 }
 
-article.blog-post h3, 
-article.blog-post h4, 
-article.blog-post h5 {
+.blog-post header h1 {
+    font-size: 1.4em;
+}
+
+.blog-post h3,
+.blog-post h4,
+.blog-post h5 {
     margin-left: 25px;
+    margin-right: 5px;
 }
 
-    article.blog-post h3::after, 
-    article.blog-post h4::after, 
-    article.blog-post h5::after {
-        content: ".";
-    }
-
-article.blog-post h4, 
-article.blog-post h5 {
+.blog-post h4,
+.blog-post h5 {
     font-style: italic;
 }
+
+.blog-post blockquote {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.blog-post ol,
+.blog-post ul {
+    padding-left:15px;
+}
+
+
+/*#region Overides for .blog-post summary displays */
+
+.list-group-item *
+{
+    text-align:left !important;
+}
+
+/*#endregion*/
