--- a/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Views/Layout.cshtml
+++ b/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Views/Layout.cshtml
@@ -1,10 +1,14 @@
 ﻿@{
-    
+    //
+    // Notes:
+    // <meta charset="utf-8" /> is defined in Document.cshtml
+    //
+
     /* Responsive Design Metas
     ***************************************************************/
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
 
     /* Global includes for the theme
     ***************************************************************/
@@ -17,7 +21,7 @@
     Style.Include("//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css");
     Style.Include("//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css");
     Style.Include("Site.css");
-    Style.Include("APA-Style.css");
+    Style.Include("APA-Style.css"); // optional
 
     /* Some useful shortcuts or settings
     ***************************************************************/
