Add metas with SetMeta.

--- a/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Styles/Site.css
+++ b/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Styles/Site.css
@@ -108,7 +108,15 @@ ul.tag-cloud > li {
     /*one line each*/
     display: block;
     white-space: nowrap;
-    overflow: hidden;
+    overflow: hidden;    
+}
+
+/*#endregion*/
+
+/*#region cursor*/
+
+.cursor-pointer {
+    cursor:pointer;    
 }
 
 /*#endregion*/
