--- a/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Views/Layout.cshtml
+++ b/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Views/Layout.cshtml
@@ -1,14 +1,16 @@
 ﻿@{
+
+
+    /* Responsive Design Metas
+    ***************************************************************/
+
     //
     // Notes:
     // <meta charset="utf-8" /> is defined in Document.cshtml
     //
-
-    /* Responsive Design Metas
-    ***************************************************************/
     
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    SetMeta(name: "", content: "IE=edge", httpEquiv: "X-UA-Compatible", charset: "");
+    SetMeta(name: "viewport", content: "width=device-width, initial-scale=1.0", httpEquiv: "", charset: "");
 
     /* Global includes for the theme
     ***************************************************************/
