--- a/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Views/Parts.TagCloud.cshtml
+++ b/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Views/Parts.TagCloud.cshtml
@@ -13,11 +13,11 @@
 
 <div class="panel panel-info">
 
-    <div class="panel-heading">
-        <a data-toggle="collapse" href="#tags">Show/Hide Topics</a>
+    <div class="panel-heading pointer cursor-pointer" data-toggle="collapse" data-target="#tags">
+        Show/Hide Topics
     </div>
 
-    <div id="tags" class="panel-collapse collapse in">
+    <div id="tags" class="panel-collapse collapse">
         <div class="panel-body">
             <ul class="tag-cloud list-unstyled list-inline">
 
