Add ie-10 support to simple blog.

--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Views/Layout.cshtml
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Views/Layout.cshtml
@@ -17,6 +17,7 @@
 
     Script.Require("ShapesBase");
     Script.Require("APA-Style"); // optional
+    Script.Require("IE-10");
     Script.Require("html5shiv").AtHead().UseCondition("lt ie 9");
     Script.Require("respondJS").AtHead().UseCondition("lt ie 9");
     Script.Require("Bootstrap");
@@ -25,6 +26,7 @@
     Style.Require("FontAwesome");
     Style.Require("Site");
     Style.Require("APA-Style"); // optional
+    Style.Require("IE-10");
 
     /* Some useful shortcuts or settings
     ***************************************************************/
