80% complete of tsokh theme and modules.

--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_KongwaHill/Styles/Site.css
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_KongwaHill/Styles/Site.css
@@ -1,6 +1,52 @@
-* {
-    color:white
+/*
+Theme: Bootstrap 3.1.1 - KongwaHill
+Author: Shaun Luttin @ bigfont.ca
+Copyright: 
+*/
+
+/* Colors Palette
+Background: #
+Text: #
+Main Accent: #
+Links: #
+*/
+
+/*#region Reset
+***************************************************************/
+
+/*#endregion*/
+
+
+/*#region Clearing Float
+***************************************************************/
+
+/*#endregion*/
+
+
+/*#region General
+***************************************************************/
+
+p, h1, h2, h3, h4, div, input {
+    color: white;
 }
+
+em {
+    color: #C89431;
+    font-weight: 900;
+}
+
+img {
+    max-width:100%;
+    height:auto; /*prevent height attributes from working*/
+}
+
+/* Headings */
+
+/*#endregion*/
+
+
+/*#region Structure
+***************************************************************/
 
 html {
     background-image: url("../../../Media/Default/cssimgs/homepage-background-section.JPG");
@@ -13,151 +59,120 @@ body {
     margin-top: 40px;
 }
 
-div.zone {
-    background-color: rgba(0, 0, 0, 0);
+/*#endregion*/
+
+
+/*#region Main
+***************************************************************/
+
+/*#endregion*/
+
+
+/*#region Secondary
+***************************************************************/
+
+/*#endregion*/
+
+
+/*#region Forms
+***************************************************************/
+
+/*#endregion*/
+
+
+/*#region Misc
+***************************************************************/
+
+div.zone > article > p > img {
+    box-shadow: 0 0 5px 5px #A1A2B9;
+    margin: 25px auto;
 }
 
-div.navbar div.navbar-inner div.container-fluid .btn-navbar {
-    font-family: Georgia,"Times New Roman",Times,serif;
-}
-
-    div.navbar div.navbar-inner div.container-fluid .btn-navbar > span {
-        float: left;
-        font-size: 36px;
-        line-height: 36px;
-    }
-
-    div.navbar div.navbar-inner div.container-fluid .btn-navbar > div {
-        float: right;
-        margin-left: 10px;
-        margin-top: 15px;
-    }
-
-div.zone-featured {
-    margin-left: -20px;
-    margin-right: -20px;
-}
-
-    div.zone-featured > article.widget-featured {
-        background-color: #986120;
-        background-image: linear-gradient(to bottom, #CC9933, #490E03);
-        background-repeat: repeat-x;
-        border-bottom: thin solid #490E03;
-        padding-bottom: 10px;
-        padding-top: 10px;
-        text-align: center;
-    }
-
-        div.zone-featured > article.widget-featured > h1 {
-            color: #FFFFFF;
-            font-size: 40px;
-            line-height: 40px;
-        }
-
-            div.zone-featured > article.widget-featured > h1 > em {
-                color: #FFCC99;
-                font-size: 54px;
-                font-style: normal;
-                line-height: 54px;
-            }
-
-        div.zone-featured > article.widget-featured > p {
-            color: #FFFFFF;
-            font-size: 20px;
-            line-height: 20px;
-        }
-
-        div.zone-featured > article.widget-featured > h2 {
-            color: #FFFFFF;
-            font-size: 16px;
-            line-height: 16px;
-        }
-    
-
-div.zone > article div.affix-top {
-}
+/*#endregion*/
 
 
-div.zone > article div.affix {
-    left: 25%;
-    margin-left: -175px;
-    position: fixed;
-    top: 39px;
-}
+/*#region Zone Featured
+***************************************************************/
 
-
-div.zone > article div.affix-bottom {
-}
-
-div.zone > article div > #myCarousel {
-
-    
-}
-
-div.zone > article div > #myCarousel {
-    margin: 50px auto;
-    padding: 55px 0 0;
-    width: 350px;
-}
-
-    div.zone > article div > #myCarousel div.carousel-inner {
-        margin: auto;
-    }
-
-        div.zone > article div > #myCarousel div.carousel-inner div.item {
-            background: none repeat scroll 0 0 #FFFFFF;
-            border: 2.5px solid #A97727;
-            margin: auto;
-            padding: 10px;
-            width: auto;
-        }
-
-            div.zone > article div > #myCarousel div.carousel-inner div.item img {
-                background: none repeat scroll 0 0 #A97727;
-                border: 1px solid #000000;
-                margin: auto;
-                padding: 1px;
-                width: 321px;
-            }
-
-    div.zone > article div > #myCarousel ol.carousel-indicators {
-        display: none;
-    }
-
-    div.zone > article div > #myCarousel a.carousel-control {
-        border: 2.5px solid #C7973A;
-        border-radius: 0;
-        color: #FFFFFF;
-        height: 50px;
-        margin: 0;
-        top: 0;
-        width: 170px;
-    }
-
-        div.zone > article div > #myCarousel a.carousel-control.left {
-            left: 0;
-        }
-
-        div.zone > article div > #myCarousel a.carousel-control.right {
-            right: 0;
-        }*/
-
-        
-
-div.zone > article > p {
-    margin: 0;
-    padding: 0;
+div.zone-featured > article.widget-featured {
+    background-color: #986120;
+    background-image: linear-gradient(to bottom, #CC9933, #490E03);
+    background-repeat: repeat-x;
+    border-bottom: thin solid #490E03;
+    padding-bottom: 10px;
+    padding-top: 10px;
     text-align: center;
 }
 
-    div.zone > article > p > img {
-        box-shadow: 0 0 5px 5px #A1A2B9;
-        margin: 20px auto;
-        width: 95%;
+    div.zone-featured > article.widget-featured > h1 {
+        color: #FFFFFF;
+        font-size: 40px;
+        line-height: 40px;
     }
 
-div.zone-content {
+        div.zone-featured > article.widget-featured > h1 > em {
+            color: #FFCC99;
+            font-size: 54px;
+            font-style: normal;
+            line-height: 54px;
+        }
+
+    div.zone-featured > article.widget-featured > p {
+        color: #FFFFFF;
+        font-size: 20px;
+        line-height: 20px;
+    }
+
+    div.zone-featured > article.widget-featured > h2 {
+        color: #FFFFFF;
+        font-size: 16px;
+        line-height: 16px;
+    }
+
+/*#endregion*/
+
+
+
+/*#region Carousel
+***************************************************************/
+
+#myCarousel {
+    margin-top: 20px; /*for now*/
+    border:thin solid #BC882D;
+    padding:8px;
 }
+
+    #myCarousel div.carousel-inner {
+    }
+
+        #myCarousel div.carousel-inner div.item {
+        }
+
+            #myCarousel div.carousel-inner div.item img {
+                margin: auto;
+                max-height: 420px;
+            }
+
+    #myCarousel ol.carousel-indicators {
+        bottom:-40px;
+    }
+
+    #myCarousel a.carousel-control {
+        font-size: 90px;
+    }
+
+        #myCarousel a.carousel-control.left {
+        }
+
+        #myCarousel a.carousel-control.right {
+        }
+
+
+/*#endregion*/
+
+
+/*#region Footer 
+***************************************************************/
 
 footer#footer {
     margin-bottom: 5px;
@@ -190,15 +205,4 @@ footer#footer {
             width: 90%;
         }
 
-div.well {
-    background-color: rgba(0, 0, 0, 0);
-    border: medium none;
-    line-height: 0;
-    margin: 0;
-    padding: 0;
-}
-
-em {
-    color: #C89431;
-    font-weight: 900;
-}
+/*#endregion*/
