Tweak  for mobile.

--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_KongwaHill/Styles/Site.css
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_KongwaHill/Styles/Site.css
@@ -155,6 +155,7 @@ div.zone-featured > article.widget-featured {
 
     #myCarousel ol.carousel-indicators {
         bottom:-40px;
+        display:none; /*for now*/
     }
 
     #myCarousel a.carousel-control {
