--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_KongwaHill/Views/Menu.cshtml
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_KongwaHill/Views/Menu.cshtml
@@ -25,7 +25,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">The Slope of Kongwa Hill</a>
+            <a class="navbar-brand" href="/">Menu</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
