--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Styles/site.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Styles/site.less
@@ -4,9 +4,10 @@ Author: Shaun Luttin @ www.bigfont.ca
 Copyright: N/A
 */
 
+@import 'font-awesome-4.1.0/less/font-awesome.less';
 @import 'bootstrap-3.1.1/bootstrap.less';
-@import 'site/apa-style.less';
-@import 'site/ie-10.less';
+@import 'site/ie-10.less'; 
+@import 'site/apa-style.less'; // optional
 
 /* Reset
 ***************************************************************/
@@ -30,7 +31,7 @@ Copyright: N/A
 #footer {
     border-top: thin solid silver;
     margin-top: 100px;
-    padding: 40px 0;
+    padding: 40px 0;    
 }
 
 /* Main
