Change bg color of hovering navs.

--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_KongwaHill/Styles/Site/Site.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_KongwaHill/Styles/Site/Site.less
@@ -47,7 +47,7 @@ body
 /*#region Forms
 ***************************************************************/
 
-input {
+input, button {
     color: black;
 }
 
