--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_KongwaHill/Styles/Site.css
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_KongwaHill/Styles/Site.css
@@ -1,4 +1,4 @@
-/*! normalize.css v3.0.0 | MIT License | git.io/normalize */
+﻿/*! normalize.css v3.0.0 | MIT License | git.io/normalize */
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -3454,7 +3454,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav > li > a:hover,
 .nav > li > a:focus {
   text-decoration: none;
-  background-color: #eeeeee;
+  background-color: transparent;
 }
 .nav > li.disabled > a {
   color: #999999;
@@ -3469,7 +3469,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a,
 .nav .open > a:hover,
 .nav .open > a:focus {
-  background-color: #eeeeee;
+  background-color: transparent;
   border-color: #ffffff;
 }
 .nav .nav-divider {
@@ -5806,7 +5806,8 @@ body {
 /*#endregion*/
 /*#region Forms
 ***************************************************************/
-input {
+input,
+button {
   color: black;
 }
 /*#endregion*/
