Start on the Bootstrap Base Theme.

--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_BaseTheme/Styles/Less/Site.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_BaseTheme/Styles/Less/Site.less
@@ -1,2 +1,4 @@
-﻿@import 'TheThemeMachine.less';
-@import 'BootstrapScaffolding.less';
+﻿/*@import 'TheThemeMachine-Original.less';*/
+@import 'TheThemeMachine-Designer.less';
+@import 'TheThemeMachine-Bootstrap-Scaffolding.less';
+
