--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/TheThemeMachineDesigner/Styles/Less/Site.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/TheThemeMachineDesigner/Styles/Less/Site.less
@@ -1,79 +1,2 @@
 ﻿@import 'TheThemeMachine-Original.less';
-
-/*
-Theme: The Theme Machine Designer
-Author: shaun @ bigfont.ca
-*/
-
-@element-spacing: 10px;
-@font-color: yellow;
-
-[id*="layout-"],
-.zone {
-    // vertical reset
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-top: 0;
-    padding-bottom: 0;
-    border: none !important;
-}
-
-body {
-    background: lighten(black, 0);
-}
-
-div#layout-wrapper {
-
-    p,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    ul,
-    span,
-    .metadata,
-    .copyright,
-    .poweredby {
-        display: none;
-    }
-
-    [id*="layout-"], .zone {
-        display: block;
-    }
-
-    &, [id*="layout-"], .zone, .widget {
-
-        &:before {
-            content: "#"attr(id)"."attr(class);
-            padding: @element-spacing;
-            display: block;
-            color: @font-color;
-        }
-    }
-    /* topography */
-    background: lighten(black, 20);
-
-    [id*="layout-"] {
-        background: lighten(black, 40);
-        margin-bottom: @element-spacing;
-    }
-
-    .zone {
-        background: lighten(black, 60);
-        margin-bottom: @element-spacing;
-    }
-
-    .widget {
-        background-color: lighten(black, 80);
-        margin-bottom: @element-spacing;
-    }
-
-    div.user-display span.user-actions {
-        &, a, span {
-            display: inline-block;
-            color: @font-color;
-        }
-    }
-}
+@import 'TheThemeMachine-Designer.less';
