--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_BaseTheme/Styles/TheThemeMachine-Bootstrap-Scaffolding.css
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_BaseTheme/Styles/TheThemeMachine-Bootstrap-Scaffolding.css
@@ -689,13 +689,15 @@
 #layout-wrapper > .group {
   margin-left: -15px;
   margin-right: -15px;
+  background: pink !important;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 #layout-wrapper > .group .zone {
   position: relative;
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
-  background: white;
 }
 @media (min-width: 992px) {
   #layout-wrapper > .group .zone {
@@ -703,7 +705,8 @@
     width: 100%;
   }
 }
-#layout-main-container > .group {
+#layout-main-container > .group,
+#layout-tripel-container > .group {
   margin-left: -15px;
   margin-right: -15px;
   background: red !important;
