Make all rows the same color.

--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_BaseTheme/Styles/Less/TheThemeMachine-Bootstrap-Scaffolding.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_BaseTheme/Styles/Less/TheThemeMachine-Bootstrap-Scaffolding.less
@@ -2,12 +2,14 @@
 @import 'Bootstrap/grid.less';
 @import 'Bootstrap/mixins.less';
 
+@row-background-color:red;
+
 #layout-wrapper {
     .container;
 
     > .group {
         .make-row();
-        background: pink !important;
+        background: @row-background-color !important;
         padding-top: 10px;
         padding-bottom: 10px;
 
@@ -20,7 +22,7 @@
 #layout-main-container > .group,
 #layout-tripel-container > .group {
     .make-row();
-    background: red !important;
+    background: @row-background-color !important;
     padding-top: 10px;
     padding-bottom: 10px;
 }
