--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_BaseTheme/Styles/TheThemeMachine-Bootstrap-Scaffolding.css
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_BaseTheme/Styles/TheThemeMachine-Bootstrap-Scaffolding.css
@@ -689,7 +689,7 @@
 #layout-wrapper > .group {
   margin-left: -15px;
   margin-right: -15px;
-  background: pink !important;
+  background: #ff0000 !important;
   padding-top: 10px;
   padding-bottom: 10px;
 }
@@ -709,7 +709,7 @@
 #layout-tripel-container > .group {
   margin-left: -15px;
   margin-right: -15px;
-  background: red !important;
+  background: #ff0000 !important;
   padding-top: 10px;
   padding-bottom: 10px;
 }
